--- a/frontEnd/SportTournamentSupportSystem/src/components/TournamentListTeamItems/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/TournamentListTeamItems/styles.css
@@ -1,20 +1,20 @@
-.UserInfoTeamsItem-info-container {
+.TournamentListTeamItems-info-container {
   display: flex;
   flex-direction: column;
   margin-bottom: 25px;
 }
 
-.UserInfoTeamsItem-container :hover {
+.TournamentListTeamItems-container :hover {
   cursor: pointer;
 }
 
-.UserInfoTeamsItem-moreInfo-container {
+.TournamentListTeamItems-moreInfo-container {
   background-color: black;
   padding-left: 25px;
   padding-right: 25px;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-container {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-container {
   width: 100%;
   height: 35px;
   display: flex;
@@ -22,70 +22,70 @@
   margin-bottom: 25px;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-container1 {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-container1 {
   background-color: #2b2f39;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-container2 {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-container2 {
   background-color: #1e232f;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-orderNumber {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-orderNumber {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-memberName {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-memberName {
   flex: 5;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-gender {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-gender {
   flex: 2;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-email {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-email {
   flex: 6;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-moreInfo-listTeamInfo-item-dob {
+.TournamentListTeamItems-moreInfo-listTeamInfo-item-dob {
   flex: 3;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-container {
+.TournamentListTeamItems-container {
   background-color: #2b2f39;
   border-radius: 7px;
   overflow: hidden;
   width: 100%;
 }
 
-.UserInfoTeamsItem-container-container {
+.TournamentListTeamItems-container-container {
   display: flex;
   width: 100%;
   flex-direction: row;
 }
 
-.UserInfoTeamsItem-order-number-container {
+.TournamentListTeamItems-order-number-container {
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-order-number-box {
+.TournamentListTeamItems-order-number-box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,19 +95,19 @@
   border-radius: 10px;
 }
 
-.UserInfoTeamsItem-team-name-container {
+.TournamentListTeamItems-team-name-container {
   flex: 7;
   padding-left: 50px;
 }
 
-.UserInfoTeamsItem-team-setting-container {
+.TournamentListTeamItems-team-setting-container {
   flex: 2;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.UserInfoTeamsItem-team-setting-container-container {
+.TournamentListTeamItems-team-setting-container-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -119,5 +119,4 @@
   border-radius: 7px;
 }
 
-.UserInfoTeamsItem-team-setting-icon {
-}
+.TournamentListTeamItems-team-setting-icon {}
