--- a/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
@@ -1,7 +1,8 @@
 .TournamentOverview-container {
   width: 350px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 50px;
   height: 500px;
   border-radius: 7px;
   overflow: hidden;
