--- a/frontEnd/SportTournamentSupportSystem/src/components/TournamentSetting/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/TournamentSetting/styles.css
@@ -12,3 +12,47 @@
   font-size: 25px;
   font-weight: bold;
 }
+
+.TournamentSetting-listManager-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.TournamentSetting-checkBox-container {
+  display: flex;
+  flex-direction: row;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.TournamentSetting-listManager-container-container {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
+
+.TournamentSetting-tounamentName-container-container {
+  margin-left: 20px;
+}
+
+.TournamentSetting-manager-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.TournamentSetting-manager-text {
+  margin-right: 20px;
+}
+
+.TournamentSetting-icon-container :hover {
+  cursor: pointer;
+}
+
+.TournamentSetting-blockUIContainer {
+  width: 100%;
+  position: absolute;
+  height: 600px;
+}
