--- a/frontEnd/SportTournamentSupportSystem/src/components/CompetitionsSetting/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/CompetitionsSetting/styles.css
@@ -31,3 +31,15 @@
 .TextInput-error-text {
   color: red;
 }
+
+.CompetitionInfo-content-info-basic-info-container-singleRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.CompetitionInfo-info-item {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
