--- a/frontEnd/SportTournamentSupportSystem/src/screens/Login/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/screens/Login/styles.css
@@ -5,6 +5,11 @@
   flex-direction: column;
 }
 
+.Container-login-container {
+  width: 100%;
+  height: 84vh;
+}
+
 .Container-login-middle {
   flex: 1;
   display: flex;
