--- a/frontEnd/SportTournamentSupportSystem/src/components/AllTournaments/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/AllTournaments/styles.css
@@ -3,6 +3,11 @@
   flex-wrap: wrap;
 }
 
+.AllTournaments-container-admin {
+  width: 100%;
+  height: 450px;
+}
+
 .AllTournaments-container-container {
   color: white;
   display: flex;
