--- a/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
@@ -18,6 +18,7 @@
 .TournamentOverview-background-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .TournamentOverview-avatar-image {
