--- a/frontEnd/SportTournamentSupportSystem/src/components/CustomModal/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/CustomModal/styles.css
@@ -20,6 +20,18 @@
   border-radius: 5px;
 }
 
+.Modal-button2 {
+  height: 35px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  margin-left: 50px;
+}
+
 .Modal-content-container {
   flex: 1;
 }
