--- a/frontEnd/SportTournamentSupportSystem/src/components/Footer/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/Footer/styles.css
@@ -1,6 +1,6 @@
 .Footer-container {
   width: 100%;
-  height: 200px;
+  /* height: 200px; */
   border-top: 1px solid white;
   margin-top: 50px;
   display: flex;
