--- a/frontEnd/SportTournamentSupportSystem/src/screens/TournamentInfo/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/screens/TournamentInfo/styles.css
@@ -94,7 +94,7 @@
   position: absolute;
   top: 625px;
   right: 200px;
-  color: white;
+  color: #002C69;
 }
 
 .TournamentInfo-avatar-image {
@@ -112,7 +112,7 @@
   position: absolute;
   top: 300px;
   left: 250px;
-  color: white;
+  color: #002C69;
 }
 
 .TournamentInfo-Overlay2 {
