--- a/frontEnd/SportTournamentSupportSystem/src/components/AllUsers/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/AllUsers/styles.css
@@ -1,6 +1,7 @@
 .AllUsers-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .AllUsers-button-text-hover :hover {
