--- a/frontEnd/SportTournamentSupportSystem/src/components/MatchSetting/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/MatchSetting/styles.css
@@ -37,6 +37,7 @@
   padding-left: 15px;
   padding-right: 15px;
   height: 40px;
+  width: 100px;
   background-color: black;
   display: flex;
   justify-content: center;
