--- a/frontEnd/SportTournamentSupportSystem/src/components/Paging/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/Paging/styles.css
@@ -39,7 +39,7 @@
 .Paging-each-page-icon1{
   justify-content: center;
   display: flex;
-  color: blue;
+  color: black;
 }
 
 .Paging-each-page-text-selected {
