--- a/frontEnd/SportTournamentSupportSystem/src/components/BracketRank/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/BracketRank/styles.css
@@ -13,6 +13,32 @@
   flex-direction: row;
 }
 
+.BracketRank-item-container1 {
+  background-color: #002C66;
+}
+
+.BracketRank-item-container2 {
+  background-color: #001736;
+}
+
+.BracketRank-item-orderNumber-1 {
+  font-weight: bold;
+  color: gold;
+  font-size: 22px;
+}
+
+.BracketRank-item-orderNumber-2 {
+  font-size: 19px;
+  font-weight: bold;
+  color: silver;
+}
+
+.BracketRank-item-orderNumber-3 {
+  font-size: 17px;
+  font-weight: bold;
+  color: #cd7f32;
+}
+
 .BracketRank-menuItem-container {
   background-color: black;
 }
@@ -28,7 +54,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 4;
+  flex: 2;
 }
 
 .BracketRank-item-managerName-container {
