--- a/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/TournamentOverview/styles.css
@@ -26,6 +26,7 @@
   height: 75px;
   border-radius: 40px;
   border: 2px solid white;
+  object-fit: cover;
 }
 
 .TournamentOverview-background-image-container {
