--- a/frontEnd/SportTournamentSupportSystem/src/components/UserInfoTeamsItem/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/UserInfoTeamsItem/styles.css
@@ -119,9 +119,9 @@
   margin-right: 20px;
   border-radius: 7px;
 }
-
+/* 
 .UserInfoTeamsItem-team-setting-icon {
-}
+} */
 
 .UserInfoTeamsItem-join-tournament-container {
   height: 50px;
