--- a/frontEnd/SportTournamentSupportSystem/src/components/Paging/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/Paging/styles.css
@@ -1,6 +1,6 @@
 .Paging-container {
   height: 40px;
-  background-color: #002C69;
+  background-color: #3bbf1a;
   border-radius: 10px;
   overflow: hidden;
   display: flex;
