--- a/frontEnd/SportTournamentSupportSystem/src/components/AllReports/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/AllReports/styles.css
@@ -51,7 +51,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #002C69;
+  background-color: black;
+  color: white;
   width: 50%;
   height: 60%;
   border-radius: 10px;
