--- a/frontEnd/SportTournamentSupportSystem/src/components/BracketMatch/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/BracketMatch/styles.css
@@ -21,7 +21,7 @@
 }
 
 .BracketMatch-numericalOrder-text {
-  color: white;
+  color: black;
 }
 
 .BracketMatch-preMatch-connector {
@@ -49,7 +49,7 @@
 }
 
 .BracketMatch-preMatch-connector-border1 {
-  border-left: 1px solid white;
+  border-left: 1px solid #3bbf1a;
 }
 
 .BracketMatch-preMatch-connector-borderr {
@@ -57,7 +57,7 @@
 }
 
 .BracketMatch-preMatch-connector-borderrr {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #3bbf1a;
 }
 
 .BracketMatch-preMatch-connector-border2 {
@@ -65,11 +65,11 @@
 }
 
 .BracketMatch-preMatch-connector-border2-border {
-  border-left: 1px solid white;
+  border-left: 1px solid #3bbf1a;
 }
 
 .BracketMatch-afterMatch-connector-border1 {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #3bbf1a;
   flex: 1;
 }
 
@@ -113,7 +113,7 @@
 }
 
 .BracketMatch-afterMatch-icon-container-background {
-  background-color: #002C69;
+  background-color: #676ec1;
 }
 
 .BracketMatch-info-container {
