--- a/frontEnd/SportTournamentSupportSystem/src/components/Teams/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/Teams/styles.css
@@ -16,7 +16,7 @@
 }
 
 .UserInfoTeamsAddItem-container2 {
-  background-color: black;
+  background-color: #3bbf1a;
   border-radius: 7px;
   overflow: hidden;
   width: 100%;
@@ -58,7 +58,7 @@
 }
 
 .UserInfoTeamsAddItem-login-container {
-  background-color: #002C69;
+  background-color: #676ec1;
   margin-bottom: 25px;
   border-radius: 10px;
 }
