--- a/frontEnd/SportTournamentSupportSystem/src/components/UserInfoTeamsItem/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/UserInfoTeamsItem/styles.css
@@ -9,10 +9,11 @@
 }
 
 .UserInfoTeamsItem-moreInfo-container {
-  background-color: black;
+  background-color: white;
   padding-left: 25px;
   padding-right: 25px;
   padding-bottom: 25px;
+  border: 1px solid black;
 }
 
 .UserInfoTeamsItem-moreInfo-listTeamInfo-item-container {
@@ -67,7 +68,7 @@
 }
 
 .UserInfoTeamsItem-container {
-  background-color: #2b2f39;
+  background-color: #676ec1;
   border-radius: 7px;
   overflow: hidden;
   width: 100%;
@@ -90,7 +91,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #002C69;
+  background-color: black;
+  color: white;
   width: 50%;
   height: 60%;
   border-radius: 10px;
@@ -166,7 +168,7 @@
 }
 
 .UserInfoTeamsItem-login {
-  background-color: #002C69;
+  background-color: #676ec1;
   border-radius: 10px;
   width: 100px;
   height: 50px;
