--- a/frontEnd/SportTournamentSupportSystem/src/screens/ChangePassword/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/screens/ChangePassword/styles.css
@@ -14,12 +14,12 @@
 }
 
 h2 {
-  color: white;
+  color: #3bbf1a;
   align-self: flex-start;
 }
 
 p {
-  color: white;
+  color: #323232;
 }
 
 .Long-introduction {
@@ -62,7 +62,7 @@ p {
 }
 
 .Checkbox-label {
-  color: #d8d8d8;
+  color: #323232;
 }
 
 .Forgot-password {
