--- a/frontEnd/SportTournamentSupportSystem/src/screens/SignUp/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/screens/SignUp/styles.css
@@ -14,12 +14,12 @@
 }
 
 h2 {
-  color: white;
+  color: #3bbf1a;
   align-self: flex-start;
 }
 
 p {
-  color: white;
+  color: #323232;
 }
 
 .Long-introduction {
@@ -62,7 +62,7 @@ p {
 }
 
 .Checkbox-label {
-  color: #d8d8d8;
+  color: #323232;
 }
 
 .Forgot-password {
@@ -70,7 +70,7 @@ p {
 }
 
 .Button-login-container {
-  background-color: #002C69;
+  background-color: #676ec1;
   margin-top: 25px;
   border-radius: 10px;
 }
