--- a/frontEnd/SportTournamentSupportSystem/src/components/BracketRank/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/BracketRank/styles.css
@@ -18,11 +18,11 @@
 }
 
 .BracketRank-item-container1 {
-  background-color: #676ec1;
+  background-color: #0028ff;
 }
 
 .BracketRank-item-container2 {
-  background-color: #4f5494;
+  background-color: #3f3f3f;
 }
 
 .BracketRank-item-orderNumber-1 {
