--- a/frontEnd/SportTournamentSupportSystem/src/components/CustomModal/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/CustomModal/styles.css
@@ -13,7 +13,7 @@
   height: 35px;
   padding-left: 15px;
   padding-right: 15px;
-  background-color: #002C69;
+  background-color: #3bbf1a;
   display: flex;
   justify-content: center;
   align-items: center;
