--- a/frontEnd/SportTournamentSupportSystem/src/components/BracketBoard/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/BracketBoard/styles.css
@@ -7,6 +7,6 @@
 .BracketBoard-container-container {
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
-  /* max-width: 100vw; */
+  /* width: 100vw; */
+  /* overflow-x: scroll; */
 }
