--- a/frontEnd/SportTournamentSupportSystem/src/components/PendingTeamsItem/styles.css
+++ b/frontEnd/SportTournamentSupportSystem/src/components/PendingTeamsItem/styles.css
@@ -13,6 +13,7 @@
   padding-left: 25px;
   padding-right: 25px;
   padding-bottom: 25px;
+  margin-bottom: 35px;
 }
 
 .PendingTeamsItem-moreInfo-listTeamInfo-item-container {
